// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VAT Calculations it calculates vat by category 1`] = `
Immutable.Map {
  "Butter": 16.558500000000002,
  "Oils": 0,
  "Cigarettes": 0,
  "AlcSoft": 0,
  "Fertilizer": 0,
  "AlcHard": 0,
  "Meds": 0,
  "Books": 0,
  "Meat": 1.075,
  "OtherFood": 0,
  "Other": 0,
  "Tobacco": 447.92,
  "Flowers": 0,
  "AnimalFeed": 0,
  "Magazines": 0,
}
`;

exports[`VAT Calculations it calculates vat by category 2`] = `
Immutable.Map {
  "Butter": 38.43350000000001,
  "Oils": 0,
  "Cigarettes": 0,
  "AlcSoft": 0,
  "Fertilizer": 0,
  "AlcHard": 0,
  "Meds": 0,
  "Books": 0,
  "Meat": 1.075,
  "OtherFood": 0,
  "Other": 0,
  "Tobacco": 447.92,
  "Flowers": 0,
  "AnimalFeed": 0,
  "Magazines": 0,
}
`;

exports[`VAT Calculations it creates a correct vat summary 1`] = `
Immutable.Record {
  "totalAllowance": 300,
  "totalVatLargeItems": 457.52500000000003,
  "totalVatNormalItems": 0,
  "vatByCategory": Immutable.Map {
    "Butter": 16.558500000000002,
    "Oils": 0,
    "Cigarettes": 0,
    "AlcSoft": 0,
    "Fertilizer": 0,
    "AlcHard": 0,
    "Meds": 0,
    "Books": 0,
    "Meat": 1.075,
    "OtherFood": 0,
    "Other": 0,
    "Tobacco": 447.92,
    "Flowers": 0,
    "AnimalFeed": 0,
    "Magazines": 0,
  },
}
`;

exports[`VAT Calculations it creates a correct vat summary 2`] = `
Immutable.Record {
  "totalAllowance": 300,
  "totalVatLargeItems": 457.52500000000003,
  "totalVatNormalItems": 19.983500000000003,
  "vatByCategory": Immutable.Map {
    "Butter": 38.43350000000001,
    "Oils": 0,
    "Cigarettes": 0,
    "AlcSoft": 0,
    "Fertilizer": 0,
    "AlcHard": 0,
    "Meds": 0,
    "Books": 0,
    "Meat": 1.075,
    "OtherFood": 0,
    "Other": 0,
    "Tobacco": 447.92,
    "Flowers": 0,
    "AnimalFeed": 0,
    "Magazines": 0,
  },
}
`;

exports[`VAT Calculations it sums all the categories and subtracts allowances as expected 1`] = `
Immutable.Record {
  "large": Immutable.OrderedMap {
    0.08: Immutable.List [
      5555,
    ],
    0.025: Immutable.List [
      525,
    ],
  },
  "normal": Immutable.OrderedMap {
    0.08: Immutable.List [
      0,
      0,
    ],
    0.025: Immutable.List [
      0,
      0,
      0,
      0,
    ],
  },
}
`;

exports[`VAT Calculations it sums all the categories and subtracts allowances as expected 2`] = `
Immutable.Record {
  "large": Immutable.OrderedMap {
    0.08: Immutable.List [
      5555,
    ],
    0.025: Immutable.List [
      525,
    ],
  },
  "normal": Immutable.OrderedMap {
    0.08: Immutable.List [
      0,
      0,
    ],
    0.025: Immutable.List [
      0,
      0,
      0,
      0,
      49.34,
      125,
      125,
      125,
      125,
      125,
      125,
    ],
  },
}
`;

exports[`VAT Calculations it sums all the categories as expected 1`] = `
Immutable.Record {
  "large": Immutable.OrderedMap {
    0.08: Immutable.List [
      5555,
    ],
    0.025: Immutable.List [
      525,
    ],
  },
  "normal": Immutable.OrderedMap {
    0.08: Immutable.List [
      11,
      33,
    ],
    0.025: Immutable.List [
      12,
      31,
      12.34,
      125,
    ],
  },
}
`;
